force-app/main/default/objects/DHS_OTP__c/DHS_OTP__c.object-meta.xml
<CustomObject>
    <label>OTP</label>
    <nameField>
        <displayFormat>OPTNumber-{000000000}</displayFormat>
        <label>OTP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OTP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>