force-app/main/default/objects/DHS_OTP__c/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Browser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>