force-app/main/default/objects/DHS_OTP__c/fields/DHS_User__c.field-meta.xml
<CustomField>
    <fullName>DHS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DHS_OTP</relationshipName>
    <type>Lookup</type>
</CustomField>