force-app/main/default/objects/DHS_OTP__c/fields/Expire_Time__c.field-meta.xml
<CustomField>
    <fullName>Expire_Time__c</fullName>
    <formula>Generated_Date_Time__c + (5/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expire Time</label>
    <type>DateTime</type>
</CustomField>