force-app/main/default/objects/DHS_OTP__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>Now() &gt;  Expire_Time__c</formula>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>