force-app/main/default/objects/DHS_OTP__c/fields/Generated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Generated_Date_Time__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Generated Date/Time</label>
    <type>DateTime</type>
</CustomField>