force-app/main/default/objects/DHS_OTP__c/fields/Is_Portal__c.field-meta.xml
<CustomField>
    <fullName>Is_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Portal</label>
    <type>Checkbox</type>
</CustomField>