force-app/main/default/objects/DHS_OTP__c/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operating System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>